--- a/Sorting/Sorting.csproj
+++ b/Sorting/Sorting.csproj
@@ -52,6 +52,8 @@
   <ItemGroup>
     <Compile Include="BubbleSort\Facts.cs" />
     <Compile Include="BubbleSort\BubbleSorter.cs" />
+    <Compile Include="InPlaceQuickSort\Facts.cs" />
+    <Compile Include="InPlaceQuickSort\InPlaceQuickSorter.cs" />
     <Compile Include="DataTypes\ArrayRef.cs" />
     <Compile Include="QuickSort\Facts.cs" />
     <Compile Include="QuickSort\QuickSorter.cs" />
