--- a/AlgoSamples/Trees/Trees.csproj
+++ b/AlgoSamples/Trees/Trees.csproj
@@ -45,11 +45,25 @@
     <Reference Include="xunit">
       <HintPath>..\packages\xunit.1.9.1\lib\net20\xunit.dll</HintPath>
     </Reference>
+    <Reference Include="xunit.extensions">
+      <HintPath>..\packages\xunit.extensions.1.9.1\lib\net20\xunit.extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.runner.msbuild">
+      <HintPath>..\packages\xunit.1.9.1\lib\net20\xunit.runner.msbuild.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.runner.tdnet">
+      <HintPath>..\packages\xunit.1.9.1\lib\net20\xunit.runner.tdnet.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.runner.utility">
+      <HintPath>..\packages\xunit.1.9.1\lib\net20\xunit.runner.utility.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FindKthSmallestItem\FindKthSmallestItemImpl.cs" />
+    <Compile Include="FindKthSmallestItem\FindKthSmallestItemImplFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResolveParentsDuplicates\TreeNodeDuplicatedParentResolver.cs" />
     <Compile Include="ResolveParentsDuplicates\TreeNode.cs" />
+    <Compile Include="ResolveParentsDuplicates\TreeNodeDuplicatedParentResolver.cs" />
     <Compile Include="ResolveParentsDuplicates\TreeNodeDuplicatedParentResolverFacts.cs" />
   </ItemGroup>
   <ItemGroup>
